<resources>
    <string name="app_name">Motion Photo Editor &amp; Animator</string>
    <string name="images_folder">Photo Motion</string>
    <string name="ad_attribution">Ad</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="load_image_fail">Error loading image!</string>
    <string name="preference_file_key">com.codeshare.photomotion.PREFERENCES_KEY</string>
    <string name="project_folder">Photo Motion</string>
    <string name="project_name">Photo Motion</string>

    <string name="txt_speed">SPEED</string>
    <string name="txt_resolution">RESOLUTION</string>

    <string name="txt_redo">Redo</string>
    <string name="txt_undo">Undo</string>

    <string name="txt_select_an_image">Select an image</string>
    <string name="txt_erase">ERASE</string>
    <string name="txt_details">Details</string>
    <string name="txt_stabilize">STABILIZE</string>

    <string name="txt_mask">MASK</string>
    <string name="txt_motion">MOTION</string>

    <string name="tools_text_save">Save/Export Video</string>
    <string name="tools_text_select_remove">SELECT</string>
    <string name="txt_sequence">SEQUENCE</string>
    <string name="txt_zoom">Zoom</string>
    <string name="txt_slow">SLOW</string>
    <string name="txt_fast">FAST</string>
    <string name="videos_folder">PhotoMotion</string>

    <string name="phone_camera_permission_not_granted">Phone Camera permision not granted</string>
    <string name="storage_permission_not_granted">Storage permission not granted</string>
    <string name="txt_my_creation">My Creation</string>

    <string name="txt_share">Share</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="set_as_wallpaper">Set as Live wallpaper</string>
    <string name="set_live_wall_target_title"></string>
    <string name="set_live_wall_target_msg">Click here to set your creation as your mobile screen Photo Motion</string>



    <string name="app_folder3">Temp</string>
    <string name="heading_one">Path</string>
    <string name="heading_two">Freeze</string>
    <string name="heading_three">Effects</string>
    <string name="heading_Four">Motion</string>
    //Description
    <string name="desc_one">Draw the animation paths</string>
    <string name="desc_two">Freeze areas you don\'t want to animatie</string>
    <string name="desc_three">Add dynamic effects to your pictures</string>
    <string name="desc_four">Add motion to your pictures</string>
    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_share">Share App</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_creation">Creation</string>

</resources>
