<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/main_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Motion Photo\nEditor &amp; Animation"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:visibility="visible">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">


                    <LinearLayout
                        android:id="@+id/llHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgHome"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_home"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llCamera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgCamera"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_camera"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llGallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgGallery"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_gallery"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llMyCreation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgcreation"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_creation"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llTutorial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgTutorial"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_tutorial"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/tv_communication"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="Communication"
                        android:textColor="#9eb1c3" />

                    <LinearLayout
                        android:id="@+id/llRateUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgRateus"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_rate_us"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgShare"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_share"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/llPrivacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imgPrivacypolicy"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/menu_privacy_policy"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
